# gedcom-mcp

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
docs/: USAGE.md
examples/: config.example.toml  sample.ged
src/: config.rs  gedcom.rs  main.rs  mcp.rs
